--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -123,5 +123,5 @@ set_custom_stdlib_and_sanitizers(${PROJECT_NAME} true)
 # copy binaries to "bin" folder; these are uploaded as artifacts on each release
 # update name in .github/workflows/cmake.yml:29 when changing "bin" name here
 install(TARGETS ${PROJECT_NAME} DESTINATION bin)
-# install(DIRECTORY some_dir1 some_dir2 DESTINATION bin)
-# install(FILES some_file1.txt some_file2.md DESTINATION bin)
+#install(DIRECTORY some_dir1 some_dir2 DESTINATION bin)
+install(FILES echipe.txt DESTINATION bin)
